--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "check": "svelte-kit sync && svelte-check",
+    "check:watch": "svelte-kit sync && svelte-check --watch",
     "lint": "eslint ."
   },
   "dependencies": {
     "@eslint/js": "^9.6.0",
     "dotenv": "^16.4.5",
-    "lucide-svelte": "^0.395.0"
+    "lucide-svelte": "^0.454.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@types/eslint": "^8.56.7",
+    "@types/eslint": "^9.6.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.0.0",
     "eslint-plugin-svelte": "^2.36.0",
