--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,24 @@
-.DS_Store
 node_modules
 .idea
 
-/build
+# Output
+.output
+.vercel
+.netlify
+.wrangler
 /.svelte-kit
-/dist
+/build
 
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
 .env
-.env*
-!.env.template
+.env.*
+!.env.example
+!.env.test
 
+# Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
