--- a/package.json
+++ b/package.json
@@ -1,33 +1,27 @@
 {
-  "name": "personal-website",
-  "version": "1.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check",
-    "check:watch": "svelte-kit sync && svelte-check --watch",
-    "lint": "eslint"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.16.0",
-    "@sveltejs/adapter-auto": "^3.3.1",
-    "@sveltejs/kit": "^2.9.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.1",
-    "@types/eslint": "^9.6.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.16.0",
-    "eslint-plugin-svelte": "^2.46.1",
-    "globals": "^15.13.0",
-    "postcss": "^8.4.49",
-    "svelte": "^5.6.1",
-    "svelte-check": "^4.1.1",
-    "tailwindcss": "^3.4.16",
-    "tslib": "^2.8.1",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.17.0",
-    "vite": "^6.0.2"
-  }
+	"name": "personal-website",
+	"private": true,
+	"version": "0.0.1",
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"autoprefixer": "^10.4.20",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.17",
+		"typescript": "^5.0.0",
+		"vite": "^6.0.7"
+	},
+	"dependencies": {
+		"lucide-svelte": "^0.473.0"
+	}
 }
