--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/kit": "^2.16.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"autoprefixer": "^10.4.20",
-		"svelte": "^5.0.0",
+		"@tailwindcss/postcss": "^4.0.0",
+		"svelte": "^5.19.2",
 		"svelte-check": "^4.0.0",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
-		"vite": "^6.0.7"
+		"vite": "^6.0.11"
 	},
 	"dependencies": {
 		"lucide-svelte": "^0.473.0"
