--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/postcss": "^4.0.0",
 		"svelte": "^5.19.2",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
@@ -22,6 +21,7 @@
 		"vite": "^6.0.11"
 	},
 	"dependencies": {
+		"@tailwindcss/vite": "^4.0.0",
 		"lucide-svelte": "^0.473.0"
 	}
 }
