--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.16.1",
+		"@sveltejs/adapter-auto": "^6.0.0",
+		"@sveltejs/kit": "^2.20.4",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/vite": "^4.0.0",
-		"svelte": "^5.19.2",
-		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
-		"typescript": "^5.0.0",
-		"vite": "^6.0.11"
-	},
-	"dependencies": {
-		"lucide-svelte": "^0.473.0"
+		"@tailwindcss/vite": "^4.1.3",
+		"lucide-svelte": "^0.487.0",
+		"svelte": "^5.25.6",
+		"svelte-check": "^4.1.5",
+		"tailwindcss": "^4.1.3",
+		"typescript": "^5.8.3",
+		"vite": "^6.2.5"
 	}
 }
