--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
+	"packageManager": "pnpm@10.11.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -11,15 +12,15 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.20.4",
+		"@sveltejs/adapter-auto": "^6.0.1",
+		"@sveltejs/kit": "^2.21.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/vite": "^4.1.3",
-		"lucide-svelte": "^0.487.0",
-		"svelte": "^5.25.6",
-		"svelte-check": "^4.1.5",
-		"tailwindcss": "^4.1.3",
+		"@tailwindcss/vite": "^4.1.7",
+		"lucide-svelte": "^0.511.0",
+		"svelte": "^5.31.0",
+		"svelte-check": "^4.2.1",
+		"tailwindcss": "^4.1.7",
 		"typescript": "^5.8.3",
-		"vite": "^6.2.5"
+		"vite": "^6.3.5"
 	}
 }
