Rewrite with Astro

--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-	"name": "personal-website",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"packageManager": "pnpm@10.11.0",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^6.0.1",
-		"@sveltejs/kit": "^2.21.1",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/vite": "^4.1.7",
-		"lucide-svelte": "^0.511.0",
-		"svelte": "^5.31.0",
-		"svelte-check": "^4.2.1",
-		"tailwindcss": "^4.1.7",
-		"typescript": "^5.8.3",
-		"vite": "^6.3.5"
-	}
+  "name": "personal-website",
+  "type": "module",
+  "version": "0.0.1",
+  "packageManager": "pnpm@10.12.1",
+  "scripts": {
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro",
+    "lint": "prettier --check .",
+    "lint:fix": "prettier --write ."
+  },
+  "dependencies": {
+    "@lucide/astro": "^0.525.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.10.2",
+    "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1"
+  }
 }
