Add README back and change project name

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,5 @@
   "semi": true,
   "tabWidth": 2,
   "printWidth": 120,
-  "plugins": [
-    "prettier-plugin-astro"
-  ]
+  "plugins": ["prettier-plugin-astro"]
 }
