--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-website",
+  "name": "portfolio-website",
   "type": "module",
   "version": "0.0.1",
   "packageManager": "pnpm@10.12.1",
